<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/player_board"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/PlayerName"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Label1"
                android:textColor="#000000"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="@id/player_names"
                app:layout_constraintEnd_toEndOf="@id/player_1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toLeftOf="@id/player_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@id/player_names"
                app:layout_constraintTop_toTopOf="@id/player_names" />

            <EditText
                android:id="@+id/player1name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/enter_names"
                android:gravity="center"
                android:hint="@string/nameHint"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@+id/player_1"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/Label2"
                android:textColor="#000000"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player1name"
                app:layout_goneMarginTop="20dp" />


            <EditText
                android:id="@+id/player2name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/enter_names"
                android:gravity="center"
                android:hint="@string/nameHint"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@+id/player_2"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/player_button"
                android:padding="15dp"
                android:text="@string/buttonName"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:onClick="submitButtonClick"
                app:layout_constraintEnd_toEndOf="@+id/player2name"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/player2name"
                app:layout_constraintTop_toBottomOf="@+id/player2name" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>